Add Feed to API
