# NotkaAPI/ViewModels/FeedForView.cs
@@ -1,0 +1,10 @@
+﻿using NotkaAPI.Models;
+using NotkaAPI.Models.General;
+
+namespace NotkaAPI.ViewModels
+{
+	public class FeedForView : DictionaryTable
+	{
+		public Picture? Picture { get; set; }
+	}
+}
